// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for aapl-nasdaq-sept-fy 1`] = `
{
  "dataNotes": [],
  "displayUnit": "billion",
  "exchange": "NASDAQ",
  "fiscalYearEndMonth": 9,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 10041000000,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 14714700000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 15640000000,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "period": "FY2025 (Oct 2024 – Sep 2025) vs FY2024 (Oct 2023 – Sep 2024)",
      "reliability": "ok",
      "value": 0.194952,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 107520000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 136683000000,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2026 (Oct 2025 – Sep 2026)",
      "reliability": "ok",
      "value": 36.3096,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.486529,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 227123000000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.173027,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 4669700000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": -21945000000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 128930000000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.276186,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 146724000000,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 154859000000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.33173,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30 dividends paid ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "ok",
      "value": 0.121306,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "declared per share (trailing) × MRQ 2026-06-30 shares ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "ok",
      "value": 0.12326,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 155906000000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 319.97,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 466823000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "period": "FY2025 (Oct 2024 – Sep 2025) vs FY2024 (Oct 2023 – Sep 2024)",
      "reliability": "ok",
      "value": 0.0642551,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, average equity across the four quarters",
      "reliability": "ok",
      "value": 1.37184,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 62399000000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 84344000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 8.762,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 36.5179,
    },
  },
  "q4IsBalancingFigure": false,
  "reportingCurrency": "USD",
  "revenueLine": "total_revenue",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for idea-nse-lossmaker 1`] = `
{
  "dataNotes": [
    "caution: The implied tax rate is outside a normal range",
    "caution: Net margin exceeds gross margin",
    "caution: The share count moved sharply and could not be explained",
  ],
  "displayUnit": "crore",
  "exchange": "NSE",
  "fiscalYearEndMonth": 3,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "unreliable",
      "value": 108271000000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "missing",
      "value": null,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": -357580000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "FY2027 (Apr 2026 – Mar 2027)",
      "reliability": "missing",
      "value": null,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": 0.603124,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": 270131000000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "unreliable",
      "value": -0.000118677,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 1627310000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": -1867390000000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 374058000000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "unreliable",
      "value": 0.822655,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": -31044000000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": -0.0693123,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "missing",
      "value": null,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": 345476000000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 15.02,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 454696000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.0306747,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 57890000000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 1925280000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, MRQ 2026-03-31 diluted shares",
      "reliability": "ok",
      "value": 3.45484,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-07-01..2026-06-30, MRQ 2026-03-31 diluted shares",
      "reliability": "ok",
      "value": 4.34753,
    },
  },
  "q4IsBalancingFigure": true,
  "reportingCurrency": "INR",
  "revenueLine": "revenue_from_operations",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for infy-nse 1`] = `
{
  "dataNotes": [],
  "displayUnit": "crore",
  "exchange": "NSE",
  "fiscalYearEndMonth": 3,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 288000000,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 4052880000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 2141000000,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.0490817,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 9619000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 3804000000,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2027 (Apr 2026 – Mar 2027)",
      "reliability": "ok",
      "value": 14.7758,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.303198,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 6154000000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.266387,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 4576840000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 2251000000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 3324000000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.163768,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 4092000000,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 4135000000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.203725,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30 dividends paid ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "ok",
      "value": 0.644103,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "declared per share (trailing) × MRQ 2026-06-30 shares ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "ok",
      "value": 60.9639,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 4531000000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 1130,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 20297000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.0457021,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, average equity across the four quarters",
      "reliability": "ok",
      "value": 0.330155,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 3174000000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 923000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 0.820158,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 1377.78,
    },
  },
  "q4IsBalancingFigure": true,
  "reportingCurrency": "INR",
  "revenueLine": "revenue_from_operations",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for jnj-nyse 1`] = `
{
  "dataNotes": [],
  "displayUnit": "billion",
  "exchange": "NYSE",
  "fiscalYearEndMonth": 12,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 5380000000,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 2440100000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 12621000000,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "period": "FY2025 (Jan 2025 – Dec 2025) vs FY2024 (Jan 2024 – Dec 2024)",
      "reliability": "ok",
      "value": 0.905588,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 84971000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 22228000000,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2026 (Jan 2026 – Dec 2026)",
      "reliability": "ok",
      "value": 24.9021,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.679074,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 66501000000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.165066,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 663276000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": -28278000000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 21037000000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.214819,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 27608000000,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 26256000000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.268113,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30 dividends paid ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "ok",
      "value": 0.599943,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "declared per share (trailing) × MRQ 2026-06-30 shares ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "ok",
      "value": 0.621711,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 25196000000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 275.23,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 97929000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "period": "FY2025 (Jan 2025 – Dec 2025) vs FY2024 (Jan 2024 – Dec 2024)",
      "reliability": "ok",
      "value": 0.0604812,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, average equity across the four quarters",
      "reliability": "ok",
      "value": 0.257351,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 20758000000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 49036000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 8.62137,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 31.9242,
    },
  },
  "q4IsBalancingFigure": false,
  "reportingCurrency": "USD",
  "revenueLine": "total_revenue",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for nvda-nasdaq 1`] = `
{
  "dataNotes": [],
  "displayUnit": "billion",
  "exchange": "NASDAQ",
  "fiscalYearEndMonth": 1,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 6572000000,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 24391000000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 973000000,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "period": "FY2026 (Feb 2025 – Jan 2026) vs FY2025 (Feb 2024 – Jan 2025)",
      "reliability": "ok",
      "value": 0.647462,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 195474000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 119076000000,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2027 (Feb 2026 – Jan 2027)",
      "reliability": "ok",
      "value": 24.7502,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 0.741454,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 187952000000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 0.157462,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 5562500000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 68224000000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-08-01..2026-07-31",
      "reliability": "ok",
      "value": 192879000000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-08-01..2026-07-31",
      "reliability": "ok",
      "value": 0.636629,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 125648000000,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 162285000000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 0.6402,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30 dividends paid ÷ TTM 2025-08-01..2026-07-31 net income",
      "reliability": "ok",
      "value": 0.00504461,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "declared per share (trailing) × MRQ 2026-04-30 shares ÷ TTM 2025-08-01..2026-07-31 net income",
      "reliability": "ok",
      "value": 0.126458,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 189443000000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 230.36,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-08-01..2026-07-31",
      "reliability": "ok",
      "value": 302969000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "period": "FY2026 (Feb 2025 – Jan 2026) vs FY2025 (Feb 2024 – Jan 2025)",
      "reliability": "ok",
      "value": 0.654735,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30, average equity across the four quarters",
      "reliability": "ok",
      "value": 1.11657,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 80572000000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 12348000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-08-01..2026-07-31, MRQ 2026-04-30 diluted shares",
      "reliability": "ok",
      "value": 7.90779,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-08-01..2026-07-31, MRQ 2026-04-30 diluted shares",
      "reliability": "ok",
      "value": 29.1308,
    },
  },
  "q4IsBalancingFigure": false,
  "reportingCurrency": "USD",
  "revenueLine": "total_revenue",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for rblbank-nse 1`] = `
{
  "dataNotes": [
    "caution: The quoted dividend yield and the declared dividend disagree",
    "caution: The share count moved sharply and could not be explained",
  ],
  "displayUnit": "crore",
  "exchange": "NSE",
  "fiscalYearEndMonth": 3,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "unreliable",
      "value": 1548560000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.225888,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 167242000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2027 (Apr 2026 – Mar 2027)",
      "reliability": "ok",
      "value": 28.9514,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.222375,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 642287000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ unavailable",
      "reliability": "missing",
      "value": null,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 8851200000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.0841963,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "declared per share (trailing) × MRQ 2026-06-30 shares ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "unreliable",
      "value": 0.174955,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 11382300000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 414.35,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 105126000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.00847526,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ unavailable",
      "reliability": "missing",
      "value": null,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 177509000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 5.71577,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 72.4924,
    },
  },
  "q4IsBalancingFigure": true,
  "reportingCurrency": "INR",
  "revenueLine": "revenue_from_operations",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for tcs-nse 1`] = `
{
  "dataNotes": [],
  "displayUnit": "crore",
  "exchange": "NSE",
  "fiscalYearEndMonth": 3,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": 41460000000,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 3617620000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": 394370000000,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.0135316,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 1072400000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": 479480000000,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2027 (Apr 2026 – Mar 2027)",
      "reliability": "ok",
      "value": 14.8566,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.450252,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 1242060000000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.250602,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 8336070000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 300900000000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 497990000000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.180523,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31",
      "reliability": "ok",
      "value": 520940000000,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 688250000000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.249493,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM 2025-03-31..2026-03-31 dividends paid ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "ok",
      "value": 0.791924,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "declared per share (trailing) × MRQ 2026-06-30 shares ÷ TTM 2025-07-01..2026-06-30 net income",
      "reliability": "ok",
      "value": 0.472188,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 664520000000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 2304,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 2758590000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.0458124,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 413730000000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 112830000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 137.657,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 16.7373,
    },
  },
  "q4IsBalancingFigure": true,
  "reportingCurrency": "INR",
  "revenueLine": "revenue_from_operations",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for trent-bse 1`] = `
{
  "dataNotes": [],
  "displayUnit": "crore",
  "exchange": "BSE",
  "fiscalYearEndMonth": 3,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ unavailable",
      "reliability": "missing",
      "value": null,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.111804,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 69846800000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2026 (Apr 2025 – Mar 2026)",
      "reliability": "ok",
      "value": 55.8747,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.444506,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 93103700000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.234664,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 1011360000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": -16323600000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 18089700000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.0863658,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 24760100000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.118212,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "missing",
      "value": null,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 23636300000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 2845,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 209454000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "fxUnadjusted": true,
      "period": "FY2026 (Apr 2025 – Mar 2026) vs FY2025 (Apr 2024 – Mar 2025)",
      "reliability": "ok",
      "value": 0.176392,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 9288900000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-03-31",
      "reliability": "ok",
      "value": 25612500000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "missing",
      "value": null,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "missing",
      "value": null,
    },
  },
  "q4IsBalancingFigure": true,
  "reportingCurrency": "INR",
  "revenueLine": "revenue_from_operations",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for tsla-no-dividend 1`] = `
{
  "dataNotes": [],
  "displayUnit": "billion",
  "exchange": "NASDAQ",
  "fiscalYearEndMonth": 12,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 12930000000,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 3540000000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "period": "FY2025 (Jan 2025 – Dec 2025) vs FY2024 (Jan 2024 – Dec 2024)",
      "reliability": "ok",
      "value": -0.467882,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 86858000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 5755000000,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2026 (Jan 2026 – Dec 2026)",
      "reliability": "ok",
      "value": 199.744,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.188518,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 19534000000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.270462,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 1398460000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 27444000000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 3806000000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.0367307,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 18685000000,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 4772000000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 0.0460533,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "missing",
      "value": null,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 5217000000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 354.08,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30",
      "reliability": "ok",
      "value": 103619000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "period": "FY2025 (Jan 2025 – Dec 2025) vs FY2024 (Jan 2024 – Dec 2024)",
      "reliability": "ok",
      "value": -0.029307,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, average equity across the four quarters",
      "reliability": "ok",
      "value": 0.0457066,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 43524000000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-06-30",
      "reliability": "ok",
      "value": 16080000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 1.07514,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-07-01..2026-06-30, MRQ 2026-06-30 diluted shares",
      "reliability": "ok",
      "value": 329.333,
    },
  },
  "q4IsBalancingFigure": false,
  "reportingCurrency": "USD",
  "revenueLine": "total_revenue",
}
`;

exports[`deriveMetrics golden set > derives stable, fully-labelled metrics for wmt-nyse-jan-fy 1`] = `
{
  "dataNotes": [],
  "displayUnit": "billion",
  "exchange": "NYSE",
  "fiscalYearEndMonth": 1,
  "metrics": {
    "capex": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 28340000000,
    },
    "dilutedShares": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 7999000000,
    },
    "dividendsPaid": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 7599000000,
    },
    "earningsGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "earningsGrowthFy": {
      "basis": "unknown",
      "period": "FY2026 (Feb 2025 – Jan 2026) vs FY2025 (Feb 2024 – Jan 2025)",
      "reliability": "ok",
      "value": 0.126415,
    },
    "equity": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 94330000000,
    },
    "fcf": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 12552000000,
    },
    "forwardPe": {
      "basis": "unknown",
      "period": "consensus estimate for FY2027 (Feb 2026 – Jan 2027)",
      "reliability": "ok",
      "value": 37.1179,
    },
    "grossMargin": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 0.249764,
    },
    "grossProfit": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 181155000000,
    },
    "impliedTaxRate": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 0.257552,
    },
    "marketCap": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 850022000000,
    },
    "netCash": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": -63450000000,
    },
    "netIncome": {
      "basis": "unknown",
      "period": "TTM 2025-08-01..2026-07-31",
      "reliability": "ok",
      "value": 22076000000,
    },
    "netMargin": {
      "basis": "unknown",
      "period": "TTM 2025-08-01..2026-07-31",
      "reliability": "ok",
      "value": 0.0300011,
    },
    "operatingCashFlow": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 40892000000,
    },
    "operatingIncome": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 30183000000,
    },
    "operatingMargin": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 0.0416142,
    },
    "payoutRatioCash": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30 dividends paid ÷ TTM 2025-08-01..2026-07-31 net income",
      "reliability": "ok",
      "value": 0.34422,
    },
    "payoutRatioDeclared": {
      "basis": "unknown",
      "period": "declared per share (trailing) × MRQ 2026-04-30 shares ÷ TTM 2025-08-01..2026-07-31 net income",
      "reliability": "ok",
      "value": 0.358716,
    },
    "pretaxIncome": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30",
      "reliability": "ok",
      "value": 30623000000,
    },
    "price": {
      "basis": "unknown",
      "period": "spot",
      "reliability": "ok",
      "value": 107.14,
    },
    "revenue": {
      "basis": "unknown",
      "period": "TTM 2025-08-01..2026-07-31",
      "reliability": "ok",
      "value": 735840000000,
    },
    "revenueGrowth": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "revenueGrowthFy": {
      "basis": "unknown",
      "period": "FY2026 (Feb 2025 – Jan 2026) vs FY2025 (Feb 2024 – Jan 2025)",
      "reliability": "ok",
      "value": 0.0472521,
    },
    "revenueGrowthUsd": {
      "basis": "unknown",
      "period": "TTM vs prior TTM unavailable",
      "reliability": "missing",
      "value": null,
    },
    "roe": {
      "basis": "unknown",
      "period": "TTM 2025-05-02..2026-04-30, average equity across the four quarters",
      "reliability": "ok",
      "value": 0.239231,
    },
    "totalCash": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 10729000000,
    },
    "totalDebt": {
      "basis": "unknown",
      "period": "MRQ 2026-04-30",
      "reliability": "ok",
      "value": 74179000000,
    },
    "trailingEps": {
      "basis": "unknown",
      "period": "TTM 2025-08-01..2026-07-31, MRQ 2026-04-30 diluted shares",
      "reliability": "ok",
      "value": 2.75984,
    },
    "trailingPe": {
      "basis": "unknown",
      "period": "price 2026-09-04 ÷ TTM 2025-08-01..2026-07-31, MRQ 2026-04-30 diluted shares",
      "reliability": "ok",
      "value": 38.821,
    },
  },
  "q4IsBalancingFigure": false,
  "reportingCurrency": "USD",
  "revenueLine": "total_revenue",
}
`;
